src/scss/kitchensink/_breadcrumbs.scss
/*
 * @group breadcrumbs
 */

.breadcrumbs {
  border-bottom: none;
  padding: 35px 0;
  margin-bottom: 0;

  > li {
    font-size: 1rem;
    text-transform: none;
    position: relative;
    display: inline-block;

    a {
      border-bottom: none !important;
    }
    &::after {
      margin: 0 5px !important;
      position: relative;
      right: 20px;
    }
  }
}
.breadcrumbs__item--has-submenu,
.c-internal-dropdown-menu > li {
  &::after {
    content: "\e981" !important; // plus
    font-family: "uos" !important;
    font-size: 12px;
  }
  &.is-active {
    &::after {
      content: "\e979" !important; // minus
    }
  }
}

.wrapper-content .breadcrumbs li a {
}

/*
 * @group breadcrumbs top links (external only)
 */

.breadcrumbs {
  > li {
    margin: 10px 10px 10px 0;
    &:last-child {
      font-weight: 700;
    }

    a {
      min-height: 24px;
      display: inline-block;
      padding-right: 20px;
      position: relative;
      z-index: 12;
    }
  }
  > li:first-child {
    font-weight: bold;
    &::after {
      content: "\e97b"; // chevron-right
      font-family: "uos";
      font-size: 12px;
      color: #3b6938;
      position: relative;
      right: 15px;
    }
  }
  > li:not(:last-child)::after {
    content: "\e97b"; // chevron-right
    font-family: "uos";
    color: #3b6938;
    font-size: 12px;
  }

  > li.breadcrumbs__item--has-submenu {
    &::after {
      color: $heritage-green !important;
    }
  }
}

/*
 * @group breadcrumb top links (internal only), internal drop down menu
 */

.breadcrumbs.breadcrumbs--internal,
.c-internal-dropdown-menu {
  a {
    color: $white;
  }
  > li {
    position: relative;
    font-size: 1rem; // 16px;
    margin-right: 16px;
    line-height: 1.5; // 24px;

    > a {
      padding: 0;
      &:hover {
        text-decoration: underline;
      }
    }
  }
}

.c-internal-dropdown-menu__wrapper {
  position: absolute;
  bottom: 0;
  right: 0;
}

.c-internal-dropdown-menu {
  list-style: none;
  margin: 0;

  // padding: 35px 0;
  > li {
    > a {
      font-weight: 700;
      color: $black;
    }
  }
  > li {
    &::after {
      color: $white !important;
      margin-left: 10px;
    }
  }
}

// internal breadcrumbs
.breadcrumbs.breadcrumbs--internal {
  // top links in breadcrumbs
  > li {
    margin: 10px 30px 10px 0;

    &:first-child {
      font-weight: 400;
    }
    &:not(:last-child)::after {
      position: relative;
      opacity: 1;
      color: #cacaca;
      content: "\e97b"; // chevron-right
      font-family: "uos";
      color: $white;
      // padding-left: 16px;
    }
    &.breadcrumbs__item--has-submenu {
      &::after {
        color: $white !important;
      }
    }
  }
}

// drop down menu isn't really a breadcrumb, but it will share some styles and sit next to
// it so it's been setup here. it doesn't share all styles though (e.g. large first link in
// breadcrumbs ) so it's it's own component
.c-internal-dropdown-menu {
  > li {
    > a {
      font-size: 1rem; // 16px;
    }
  }
}

/*
 * @group submenus
 */

.breadcrumbs li ul {
  left: -25px;
}
// .c-internal-dropdown-menu li ul {
//     left: 0;
// }

.breadcrumbs li ul,
.c-internal-dropdown-menu li ul {
  display: none;
  position: absolute;
  list-style: none;
  padding: 0;
  margin: 0;
  z-index: z($z-index-elements, breadcrumbs-submenu);
  top: 100%;
  // left: -25px;
  // white-space: nowrap;
  padding: 50px 0 20px 0;
  min-width: 30ch;

  // shadow line beneath the submenu
  &::after {
    content: " ";
    position: absolute;
    left: 0;
    bottom: -5px;
    height: 5px;
    width: 100%;
    border-bottom: 5px solid #000;
    opacity: 0.2;
  }

  // links in submenu
  li {
    float: none;
    padding: 2px 25px;
    font-size: 1rem; // 16px;
    text-transform: none;
    font-weight: normal;
    line-height: 1.2;
    margin-bottom: 7px;

    &::after {
      content: "";
    }
    .currentsection {
      font-weight: 700;
      color: #4f514f;
    }
    &:not(:last-child)::after {
      content: none;
    }
  }
}

.c-internal-dropdown-menu li ul {
  a {
    // font-size: 16px;
    &:hover {
      text-decoration: underline !important;
    }
  }
}

/*
 * @group submenus (external only)
 */
.breadcrumbs {
  li ul {
    background-color: $bg-grey;
  }

  li[data-collapse] > a {
    display: inline-block;
    font-weight: 700;
    font-size: 2rem;
    line-height: 1rem;
    transform: translateY(-0.175rem);
  }

  li:not([data-collapse]) ul {
    // links in submenu
    li:first-child {
      &::after {
        content: none;
      }
      a {
        margin-bottom: 10px;
        padding-bottom: 10px;
        border-bottom: 1px dotted $medium-gray;
        display: block;
      }
    }
  }
}

/*
 *  @group submenus (internal only), internal drop down menu submenu
 */

// breadcrumb and drop down submenu for INTERNAL
// as these two menus both share the same styling, they have been grouped together
.breadcrumbs.breadcrumbs--internal li ul,
.c-internal-dropdown-menu li ul {
  background: $heritage-green;
  a {
    color: $white;
  }
}

// show active submenu
.breadcrumbs > li.is-active > ul,
.c-internal-dropdown-menu > li.is-active > ul {
  display: block;
}

html:not([data-whatintent="mouse"]) ul.breadcrumbs li:not([data-initialized]) {
  &:hover ul,
  a:focus + ul,
  &:focus-within ul {
    display: block;
  }
}

ul.breadcrumbs li:empty {
  display: none;
}

